# ScreenTime

./: LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_usage.rs  main.rs  screen_time.rs  test.rs  tracking.rs
src/components/: AppUsageList.tsx  Dashboard.tsx  MostUsedApps.tsx  OverallScreenTime.tsx  RootLayout.tsx  UsageChart.tsx  app-usage.tsx  applist.tsx  overview.tsx  sidebar.tsx  windows-controls.tsx
src/components/pagecomp/: Sidebar.tsx  UsageChart.tsx  mode-toggle.tsx  screentimelist.tsx
src/hooks/: screenTime.ts
src/lib/: types.ts
src/pages/: AppUsage.tsx  Dashboard.tsx  Demo.tsx  ScreenTime.tsx  settings.tsx  test.tsx  test2.tsx
