[package]
name = "screentime"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-close", "window-maximize", "window-start-dragging", "window-minimize", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
active-win-pos-rs = "0.9.0"
tokio = { version = "1.43.0", features = ["full"] }
winapi = { version = "0.3.9", features = ["winuser", "winbase", "processthreadsapi", "psapi", "minwindef", "winnt", "handleapi", "winerror"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
